--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html, body, #root {
   
   color-scheme: light dark;
   color: rgba(252, 228, 228, 0.87);
-  background-color: #000;
+  background-color: #ffffff00;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,13 +37,6 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-body {
-  margin: 0;
-  min-width: 320px;
-  height: 100%;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
