--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html, body, #root {
   max-height: none !important;
 }
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   
